Ingress(网络模型)/pymain_headless.yaml
apiVersion: v1
kind: Service
metadata: 
  name: pymain-headless
  namespace: pymain
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pymain
